Work on Sonar Issues